--- a/art.html
+++ b/art.html
@@ -303,33 +303,49 @@
     <p>Visual transmissions from a fractured future. Explore our curated gallery of cyberpunk artwork from emerging and established creators. Submit your own vision to be featured in the next issue.</p>
   </section>
 
-  <section class="gallery-grid" id="artGrid">
-    <!-- Tiles (each must include data-title and data-artist) -->
-    <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 1.png" alt="Art 1">
-    </div>
-    <div class="art-tile" onclick="openModal(1)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 2.png" alt="Art 2">
-    </div>
-    <div class="art-tile" onclick="openModal(2)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 3.png" alt="Art 3">
-    </div>
-    <div class="art-tile" onclick="openModal(3)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 4.png" alt="Art 4">
-    </div>
-    <div class="art-tile" onclick="openModal(4)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 5.png" alt="Art 5">
-    </div>
-    <div class="art-tile" onclick="openModal(5)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 6.png" alt="Art 6">
-    </div>
-    <div class="art-tile" onclick="openModal(6)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 7.png" alt="Art 7">
-    </div>
-    <div class="art-tile" onclick="openModal(7)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="Placeholder Image 8.png" alt="Art 8">
-    </div>
-  </section>
+ <section class="gallery-grid" id="artGrid">
+  <div class="art-tile" onclick="openModal(0)" data-title="System Check" data-artist="Submitted by Artist Name">
+    <img src="CBA1.jpg" alt="Cybernetic woman inspecting her arm">
+  </div>
+  <div class="art-tile" onclick="openModal(1)" data-title="Fall Into Neon" data-artist="Submitted by Artist Name">
+    <img src="CBA3.jpg" alt="Falling character in tech armor on yellow">
+  </div>
+  <div class="art-tile" onclick="openModal(2)" data-title="Silicon Whisper" data-artist="Submitted by Artist Name">
+    <img src="CBA4.jpg" alt="Cybernetic girl with bob cut and head implants">
+  </div>
+  <div class="art-tile" onclick="openModal(3)" data-title="Reticle Reflections" data-artist="Submitted by Artist Name">
+    <img src="CBA5.jpg" alt="Close-up with visor and pink eyes">
+  </div>
+  <div class="art-tile" onclick="openModal(4)" data-title="Interface Collapse" data-artist="Submitted by Artist Name">
+    <img src="CBA6.jpg" alt="Neon-lined character breaking apart digitally">
+  </div>
+
+  <!-- Original placeholders start here -->
+  <div class="art-tile" onclick="openModal(5)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 1.png" alt="Art 1">
+  </div>
+  <div class="art-tile" onclick="openModal(6)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 2.png" alt="Art 2">
+  </div>
+  <div class="art-tile" onclick="openModal(7)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 3.png" alt="Art 3">
+  </div>
+  <div class="art-tile" onclick="openModal(8)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 4.png" alt="Art 4">
+  </div>
+  <div class="art-tile" onclick="openModal(9)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 5.png" alt="Art 5">
+  </div>
+  <div class="art-tile" onclick="openModal(10)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 6.png" alt="Art 6">
+  </div>
+  <div class="art-tile" onclick="openModal(11)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 7.png" alt="Art 7">
+  </div>
+  <div class="art-tile" onclick="openModal(12)" data-title="Title or short description here" data-artist="Artist Name Here">
+    <img src="Placeholder Image 8.png" alt="Art 8">
+  </div>
+</section>
 
   <!-- Modal -->
   <div id="imageModal" class="modal">
