--- a/art.html
+++ b/art.html
@@ -221,6 +221,36 @@
       right: 2%;
     }
 
+    .featured-carousel {
+  overflow-x: auto;
+  padding: 1rem 0 3rem;
+  background: linear-gradient(to right, #1b1e35, #2d2b4a);
+}
+
+.carousel-track {
+  display: flex;
+  gap: 1.5rem;
+  padding: 1rem 2rem;
+  scroll-snap-type: x mandatory;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.carousel-track img {
+  height: 280px;
+  flex-shrink: 0;
+  scroll-snap-align: start;
+  border-radius: 10px;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(13, 246, 227, 0.1);
+}
+
+.carousel-track img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 25px rgba(255, 74, 194, 0.4);
+}
+
     footer {
       background: #0f0f1c;
       padding: 4rem 2rem 2rem;
@@ -300,8 +330,18 @@
 
   <section class="gallery-hero">
     <h1>Featured Cyberpunk Art</h1>
-    <p>Visual transmissions from a fractured future. Explore our curated gallery of cyberpunk artwork from emerging and established creators. Submit your own vision to be featured in the next issue.</p>
+    <p>Cool picks, idk. Submit your own artwork to be featured in the next issue. No AI, dork.</p>
   </section>
+<section class="featured-carousel">
+  <h2 style="text-align: center; font-size: 1.5rem; color: #0df6e3; margin-bottom: 1rem;">Featured Art Highlights</h2>
+  <div class="carousel-track">
+    <img src="CBA1.jpg" alt="Featured Art 1">
+    <img src="CBA3.jpg" alt="Featured Art 2">
+    <img src="CBA4.jpg" alt="Featured Art 3">
+    <img src="CBA5.jpg" alt="Featured Art 4">
+    <img src="CBA6.jpg" alt="Featured Art 5">
+  </div>
+</section>
 
  <section class="gallery-grid" id="artGrid">
   <div class="art-tile" onclick="openModal(0)" data-title="System Check" data-artist="Submitted by Artist Name">
