--- a/art.html
+++ b/art.html
@@ -12,457 +12,226 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
-
-    html {
-      scroll-behavior: smooth;
-    }
-
     h1, h2, h3, h4, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-
-    .site-header {
+    header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: center;
       background: #0df6e3;
       color: #0f0f1c;
-      padding: 1rem 2rem;
-      font-size: 2rem;
-      flex-wrap: wrap;
-      position: relative;
+      padding: 1.5rem;
+      font-size: 1.5rem;
+      font-weight: 600;
     }
-
-    .logo-title {
-      display: flex;
-      align-items: center;
-      gap: 1rem;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .logo-title img {
-      height: 60px;
-      width: auto;
-    }
-
-    .site-nav {
-      display: flex;
-      gap: 2rem;
-      font-size: 1rem;
-    }
-
-    .site-nav a {
-      color: #0f0f1c;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-
-    .site-nav a:hover {
-      color: #ff4ac2;
-    }
-
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      cursor: pointer;
-      width: 30px;
-      height: 25px;
-      gap: 5px;
-    }
-
-    .hamburger div {
-      background: #0f0f1c;
-      height: 4px;
-      width: 100%;
-      border-radius: 2px;
-    }
-
-    @media (max-width: 768px) {
-      .site-nav {
-        flex-direction: column;
-        width: 100%;
-        display: none;
-        background-color: #0df6e3;
-        padding: 1rem 0;
-        margin-top: 1rem;
-      }
-
-      .site-nav.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
-    }
-
     .gallery-hero {
       text-align: center;
-      padding: 4rem 2rem 2rem;
+      padding: 2rem 1rem;
     }
-
     .gallery-hero h1 {
       font-size: 2.5rem;
-      background: linear-gradient(90deg, #f72585, #7209b7);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
       margin-bottom: 1rem;
+      color: #ff4ac2;
     }
-
     .gallery-hero p {
-      font-size: 1.1rem;
-      color: #ccc;
       max-width: 700px;
-      margin: auto;
+      margin: 0 auto;
+      font-size: 1rem;
+      color: #ccc;
     }
-
-    .gallery-grid {
+    .gallery {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 2rem;
-      padding: 3rem 2rem;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 1.5rem;
+      padding: 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
     }
-
-    .art-tile {
-      background: #1a1c30;
-      border-radius: 10px;
-      overflow: hidden;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: pointer;
-    }
-
-    .art-tile:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 25px rgba(13, 246, 227, 0.15);
-    }
-
-    .art-tile img {
+    .gallery img {
       width: 100%;
-      height: 300px;
-      object-fit: cover;
-      display: block;
+      height: auto;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+    }
+    .gallery img:hover {
+      transform: scale(1.03);
     }
 
     .modal {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      opacity: 0;
-      visibility: hidden;
+      display: none;
       position: fixed;
-      z-index: 999;
+      z-index: 1000;
       left: 0;
       top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.9);
-      transition: opacity 0.4s ease, transform 0.3s ease;
-    }
-
-    .modal.show {
-      opacity: 1;
-      visibility: visible;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.8);
+      backdrop-filter: blur(8px);
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 0.3s ease;
     }
 
     .modal-content {
       max-width: 90%;
+      max-height: 80%;
+      position: relative;
+      animation: scaleUp 0.3s ease;
+    }
+
+    .modal-content img {
+      width: 100%;
       max-height: 80vh;
+      object-fit: contain;
       border-radius: 10px;
-      box-shadow: 0 0 30px rgba(13, 246, 227, 0.2);
-      transition: transform 0.3s ease;
+    }
+
+    .modal-caption {
+      color: #ddd;
+      margin-top: 0.5rem;
+      text-align: center;
+      font-size: 1rem;
     }
 
     .close {
       position: absolute;
-      top: 20px;
-      right: 35px;
+      top: -40px;
+      right: 0;
       color: #0df6e3;
-      font-size: 40px;
+      font-size: 36px;
       font-weight: bold;
       cursor: pointer;
+      z-index: 1010;
     }
 
-    .modal-caption {
-      color: #ccc;
-      margin-top: 1rem;
-      text-align: center;
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
-    .modal-caption h3 {
-      margin: 0;
-      color: #0df6e3;
+    @keyframes scaleUp {
+      from { transform: scale(0.8); opacity: 0; }
+      to { transform: scale(1); opacity: 1; }
     }
 
-    .modal-caption p {
-      margin: 0.5rem 0 0;
-    }
-
-    .nav-arrow {
+    .modal-nav {
       position: absolute;
       top: 50%;
       transform: translateY(-50%);
       font-size: 3rem;
       color: #0df6e3;
-      background: none;
-      border: none;
       cursor: pointer;
-      z-index: 1000;
+      padding: 0 1rem;
+      user-select: none;
+      z-index: 1010;
     }
 
-    .nav-arrow.left {
-      left: 2%;
+    .modal-nav.left {
+      left: -60px;
     }
 
-    .nav-arrow.right {
-      right: 2%;
+    .modal-nav.right {
+      right: -60px;
     }
 
-    .featured-carousel {
-  overflow-x: auto;
-  padding: 1rem 0 3rem;
-  background: linear-gradient(to right, #1b1e35, #2d2b4a);
-}
-
-.carousel-track {
-  display: flex;
-  gap: 1.5rem;
-  padding: 1rem 2rem;
-  scroll-snap-type: x mandatory;
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.carousel-track img {
-  height: 280px;
-  flex-shrink: 0;
-  scroll-snap-align: start;
-  border-radius: 10px;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-  box-shadow: 0 0 20px rgba(13, 246, 227, 0.1);
-}
-
-.carousel-track img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 25px rgba(255, 74, 194, 0.4);
-}
-
-    footer {
-      background: #0f0f1c;
-      padding: 4rem 2rem 2rem;
-      color: #aaa;
-      font-size: 0.9rem;
-    }
-
-    footer a:hover {
-      color: #0df6e3;
-    }
-
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      gap: 3rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .footer-column {
-      flex: 1 1 250px;
-      min-width: 200px;
-    }
-
-    .footer-logo {
-      height: 100px;
-      margin-bottom: 1rem;
-    }
-
-    .footer-bottom {
-      text-align: center;
-      margin-top: 3rem;
-      border-top: 1px solid #222;
-      padding-top: 1rem;
-      color: #555;
-    }
-
-    .newsletter-input {
-      padding: 0.6rem 1rem;
-      border-radius: 4px;
-      border: none;
-      width: 70%;
-      margin-bottom: 0.8rem;
-    }
-
-    .newsletter-button {
-      padding: 0.6rem 1.2rem;
-      background-color: #0df6e3;
-      color: #0f0f1c;
-      border: none;
-      border-radius: 4px;
-      font-weight: bold;
-      cursor: pointer;
+    @media (max-width: 768px) {
+      .modal-nav.left { left: 10px; }
+      .modal-nav.right { right: 10px; }
+      .close { top: 10px; right: 20px; }
     }
   </style>
 </head>
 <body>
-
-  <header class="site-header">
-    <a href="index.html" class="logo-title">
-      <img src="Flame logo-1.png.png" alt="Burnline logo">
-      <span>BURNLINE</span>
-    </a>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <nav class="site-nav" id="site-nav">
-      <a href="fiction.html">Fiction</a>
-      <a href="art.html">Art</a>
-      <a href="about.html">About</a>
-      <a href="submit.html">Submit</a>
-    </nav>
-  </header>
+  <header>Burnline</header>
 
   <section class="gallery-hero">
-    <h1>Featured Cyberpunk Art</h1>
-    <p>Cool picks, idk. Submit your own artwork to be featured in the next issue. No AI, dork.</p>
+    <h1>Cyberpunk Art</h1>
+    <p>Enter a visual dimension of neon-lit spires, glitch dreams, and augmented realities. Tap any image to expand and explore the mood and medium.</p>
   </section>
-<section class="featured-carousel">
-  <h2 style="text-align: center; font-size: 1.5rem; color: #0df6e3; margin-bottom: 1rem;">Featured Art Highlights</h2>
-  <div class="carousel-track">
-    <img src="CBA1.jpg" alt="Featured Art 1">
-    <img src="CBA3.jpg" alt="Featured Art 2">
-    <img src="CBA4.jpg" alt="Featured Art 3">
-    <img src="CBA5.jpg" alt="Featured Art 4">
-    <img src="CBA6.jpg" alt="Featured Art 5">
-  </div>
-</section>
 
- <section class="gallery-grid" id="artGrid">
-  <div class="art-tile" onclick="openModal(0)" data-title="System Check" data-artist="Submitted by Artist Name">
-    <img src="CBA1.jpg" alt="Cybernetic woman inspecting her arm">
-  </div>
-  <div class="art-tile" onclick="openModal(1)" data-title="Fall Into Neon" data-artist="Submitted by Artist Name">
-    <img src="CBA3.jpg" alt="Falling character in tech armor on yellow">
-  </div>
-  <div class="art-tile" onclick="openModal(2)" data-title="Silicon Whisper" data-artist="Submitted by Artist Name">
-    <img src="CBA4.jpg" alt="Cybernetic girl with bob cut and head implants">
-  </div>
-  <div class="art-tile" onclick="openModal(3)" data-title="Reticle Reflections" data-artist="Submitted by Artist Name">
-    <img src="CBA5.jpg" alt="Close-up with visor and pink eyes">
-  </div>
-  <div class="art-tile" onclick="openModal(4)" data-title="Interface Collapse" data-artist="Submitted by Artist Name">
-    <img src="CBA6.jpg" alt="Neon-lined character breaking apart digitally">
-  </div>
+  <section class="gallery">
+    <img src="CBA1.jpg" alt="Cyberpunk Art 1" data-caption="Artist: Name Placeholder – Title: Placeholder" />
+    <img src="CBA3.jpg" alt="Cyberpunk Art 2" data-caption="Artist: Name Placeholder – Title: Placeholder" />
+    <img src="CBA4.jpg" alt="Cyberpunk Art 3" data-caption="Artist: Name Placeholder – Title: Placeholder" />
+    <img src="CBA5.jpg" alt="Cyberpunk Art 4" data-caption="Artist: Name Placeholder – Title: Placeholder" />
+    <img src="CBA6.jpg" alt="Cyberpunk Art 5" data-caption="Artist: Name Placeholder – Title: Placeholder" />
+  </section>
 
-  <!-- Original placeholders start here -->
-  <div class="art-tile" onclick="openModal(5)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 1.png" alt="Art 1">
-  </div>
-  <div class="art-tile" onclick="openModal(6)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 2.png" alt="Art 2">
-  </div>
-  <div class="art-tile" onclick="openModal(7)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 3.png" alt="Art 3">
-  </div>
-  <div class="art-tile" onclick="openModal(8)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 4.png" alt="Art 4">
-  </div>
-  <div class="art-tile" onclick="openModal(9)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 5.png" alt="Art 5">
-  </div>
-  <div class="art-tile" onclick="openModal(10)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 6.png" alt="Art 6">
-  </div>
-  <div class="art-tile" onclick="openModal(11)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 7.png" alt="Art 7">
-  </div>
-  <div class="art-tile" onclick="openModal(12)" data-title="Title or short description here" data-artist="Artist Name Here">
-    <img src="Placeholder Image 8.png" alt="Art 8">
-  </div>
-</section>
-
-  <!-- Modal -->
-  <div id="imageModal" class="modal">
+  <div id="modal" class="modal">
     <span class="close" onclick="closeModal()">&times;</span>
-    <button class="nav-arrow left" onclick="changeSlide(-1)">&#10094;</button>
-    <img class="modal-content" id="modalImage" alt="Expanded artwork">
-    <button class="nav-arrow right" onclick="changeSlide(1)">&#10095;</button>
-    <div class="modal-caption">
-      <h3 id="modalTitle"></h3>
-      <p id="modalArtist"></p>
+    <span class="modal-nav left" onclick="prevImage()">&#10094;</span>
+    <div class="modal-content">
+      <img id="modal-img" src="" alt="">
+      <div class="modal-caption" id="modal-caption"></div>
     </div>
+    <span class="modal-nav right" onclick="nextImage()">&#10095;</span>
   </div>
-
-  <footer>
-    <div class="footer-container">
-      <div class="footer-column">
-        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
-        <form style="margin-top: 1rem;">
-          <input type="email" placeholder="Email Address" class="newsletter-input">
-          <br>
-          <button type="submit" class="newsletter-button">Subscribe</button>
-        </form>
-      </div>
-      <div class="footer-column">
-        <h4 style="color: #0df6e3;">Get In Touch</h4>
-        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
-      </div>
-      <div class="footer-column">
-        <h4 style="color: #0df6e3;">Read</h4>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
-        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      &copy; 2025 Burnline Magazine — All rights reserved
-    </div>
-  </footer>
 
   <script>
+    const modal = document.getElementById('modal');
+    const modalImg = document.getElementById('modal-img');
+    const modalCaption = document.getElementById('modal-caption');
+    const galleryImages = document.querySelectorAll('.gallery img');
     let currentIndex = 0;
-    const modal = document.getElementById('imageModal');
-    const modalImg = document.getElementById('modalImage');
-    const modalTitle = document.getElementById('modalTitle');
-    const modalArtist = document.getElementById('modalArtist');
-    const tiles = document.querySelectorAll('.art-tile');
 
     function openModal(index) {
       currentIndex = index;
-      const tile = tiles[index];
-      modal.classList.add('show');
-      modalImg.src = tile.querySelector('img').src;
-      modalTitle.textContent = tile.dataset.title || '';
-      modalArtist.textContent = tile.dataset.artist || '';
+      modal.style.display = 'flex';
+      updateModal();
     }
 
     function closeModal() {
-      modal.classList.remove('show');
+      modal.style.display = 'none';
     }
 
-    function changeSlide(direction) {
-      currentIndex = (currentIndex + direction + tiles.length) % tiles.length;
-      openModal(currentIndex);
+    function updateModal() {
+      const img = galleryImages[currentIndex];
+      modalImg.src = img.src;
+      modalCaption.innerText = img.getAttribute('data-caption');
     }
 
-    document.addEventListener('keydown', function(e) {
-      if (!modal.classList.contains('show')) return;
-      if (e.key === 'ArrowRight') changeSlide(1);
-      if (e.key === 'ArrowLeft') changeSlide(-1);
-      if (e.key === 'Escape') closeModal();
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + galleryImages.length) % galleryImages.length;
+      updateModal();
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % galleryImages.length;
+      updateModal();
+    }
+
+    galleryImages.forEach((img, index) => {
+      img.addEventListener('click', () => openModal(index));
     });
 
-    function toggleMenu() {
-      const nav = document.getElementById('site-nav');
-      nav.classList.toggle('active');
-    }
+    modal.addEventListener('click', (e) => {
+      if (e.target === modal) {
+        closeModal();
+      }
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (modal.style.display === 'flex') {
+        if (e.key === 'ArrowLeft') prevImage();
+        if (e.key === 'ArrowRight') nextImage();
+        if (e.key === 'Escape') closeModal();
+      }
+    });
+
+    // Swipe gesture support
+    let startX = 0;
+    modal.addEventListener('touchstart', e => startX = e.touches[0].clientX);
+    modal.addEventListener('touchend', e => {
+      if (!startX) return;
+      const endX = e.changedTouches[0].clientX;
+      const diff = startX - endX;
+      if (diff > 50) nextImage();
+      if (diff < -50) prevImage();
+      startX = 0;
+    });
   </script>
 </body>
 </html>
