--- a/art.html
+++ b/art.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Art – Burnline</title>
+  <title>Burnline – Art</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
@@ -12,99 +12,139 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
-    h1, h2, h3, h4, nav a, header {
+    html {
+      scroll-behavior: smooth;
+    }
+    h1, h2, h3, h4, h5, h6, nav a, header {
       font-family: 'Orbitron', sans-serif;
     }
-    header {
+
+    .site-header {
       display: flex;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
       background: #0df6e3;
       color: #0f0f1c;
-      padding: 1.5rem;
-      font-size: 1.5rem;
-      font-weight: 600;
+      padding: 1rem 2rem;
+      font-size: 2rem;
+      font-family: 'Orbitron', sans-serif;
+      flex-wrap: wrap;
+      position: relative;
     }
-    .gallery-hero {
-      text-align: center;
-      padding: 2rem 1rem;
+
+    .logo-title {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+      text-decoration: none;
+      color: inherit;
     }
-    .gallery-hero h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+
+    .logo-title img {
+      height: 60px;
+      width: auto;
+    }
+
+    .site-nav {
+      display: flex;
+      gap: 2rem;
+      font-size: 1rem;
+    }
+
+    .site-nav a {
+      color: #0f0f1c;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    .site-nav a:hover {
       color: #ff4ac2;
     }
-    .gallery-hero p {
-      max-width: 700px;
-      margin: 0 auto;
-      font-size: 1rem;
-      color: #ccc;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .gallery img {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
       cursor: pointer;
-      transition: transform 0.3s ease;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+      width: 30px;
+      height: 25px;
+      gap: 5px;
     }
-    .gallery img:hover {
-      transform: scale(1.03);
+
+    .hamburger div {
+      background: #0f0f1c;
+      height: 4px;
+      width: 100%;
+      border-radius: 2px;
+    }
+
+    @media (max-width: 768px) {
+      .site-nav {
+        flex-direction: column;
+        width: 100%;
+        display: none;
+        background-color: #0df6e3;
+        padding: 1rem 0;
+        margin-top: 1rem;
+      }
+
+      .site-nav.active {
+        display: flex;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+
+    .carousel-container {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .carousel {
+      display: flex;
+      overflow-x: auto;
+      scroll-snap-type: x mandatory;
+      gap: 1.5rem;
+    }
+
+    .carousel img {
+      height: 200px;
+      border-radius: 10px;
+      cursor: pointer;
+      scroll-snap-align: center;
+      transition: transform 0.3s ease;
+    }
+
+    .carousel img:hover {
+      transform: scale(1.05);
     }
 
     .modal {
       display: none;
       position: fixed;
       z-index: 1000;
-      left: 0;
       top: 0;
+      left: 0;
       width: 100vw;
       height: 100vh;
-      background-color: rgba(0, 0, 0, 0.8);
-      backdrop-filter: blur(8px);
+      background-color: rgba(0,0,0,0.9);
       justify-content: center;
       align-items: center;
-      animation: fadeIn 0.3s ease;
+      animation: fadeIn 0.4s ease;
     }
 
-    .modal-content {
-      max-width: 90%;
-      max-height: 80%;
-      position: relative;
-      animation: scaleUp 0.3s ease;
-    }
-
-    .modal-content img {
-      width: 100%;
+    .modal img {
+      max-width: 80%;
       max-height: 80vh;
-      object-fit: contain;
-      border-radius: 10px;
+      border-radius: 12px;
     }
 
-    .modal-caption {
-      color: #ddd;
-      margin-top: 0.5rem;
-      text-align: center;
-      font-size: 1rem;
-    }
-
-    .close {
-      position: absolute;
-      top: -40px;
-      right: 0;
-      color: #0df6e3;
-      font-size: 36px;
-      font-weight: bold;
-      cursor: pointer;
-      z-index: 1010;
+    .modal.active {
+      display: flex;
     }
 
     @keyframes fadeIn {
@@ -112,125 +152,145 @@
       to { opacity: 1; }
     }
 
-    @keyframes scaleUp {
-      from { transform: scale(0.8); opacity: 0; }
-      to { transform: scale(1); opacity: 1; }
+    footer {
+      background: #0f0f1c;
+      padding: 4rem 2rem 2rem;
+      color: #aaa;
+      font-size: 0.9rem;
+      font-family: 'Inter', sans-serif;
     }
 
-    .modal-nav {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 3rem;
+    footer a:hover {
       color: #0df6e3;
+    }
+
+    .footer-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 3rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .footer-column {
+      flex: 1 1 250px;
+      min-width: 200px;
+    }
+
+    .footer-logo {
+      height: 100px;
+      margin-bottom: 1rem;
+    }
+
+    .footer-bottom {
+      text-align: center;
+      margin-top: 3rem;
+      border-top: 1px solid #222;
+      padding-top: 1rem;
+      color: #555;
+    }
+
+    .newsletter-input {
+      padding: 0.6rem 1rem;
+      border-radius: 4px;
+      border: none;
+      width: 70%;
+      margin-bottom: 0.8rem;
+    }
+
+    .newsletter-button {
+      padding: 0.6rem 1.2rem;
+      background-color: #0df6e3;
+      color: #0f0f1c;
+      border: none;
+      border-radius: 4px;
+      font-weight: bold;
       cursor: pointer;
-      padding: 0 1rem;
-      user-select: none;
-      z-index: 1010;
-    }
-
-    .modal-nav.left {
-      left: -60px;
-    }
-
-    .modal-nav.right {
-      right: -60px;
-    }
-
-    @media (max-width: 768px) {
-      .modal-nav.left { left: 10px; }
-      .modal-nav.right { right: 10px; }
-      .close { top: 10px; right: 20px; }
     }
   </style>
 </head>
 <body>
-  <header>Burnline</header>
-
-  <section class="gallery-hero">
-    <h1>Cyberpunk Art</h1>
-    <p>Enter a visual dimension of neon-lit spires, glitch dreams, and augmented realities. Tap any image to expand and explore the mood and medium.</p>
-  </section>
-
-  <section class="gallery">
-    <img src="CBA1.jpg" alt="Cyberpunk Art 1" data-caption="Artist: Name Placeholder – Title: Placeholder" />
-    <img src="CBA3.jpg" alt="Cyberpunk Art 2" data-caption="Artist: Name Placeholder – Title: Placeholder" />
-    <img src="CBA4.jpg" alt="Cyberpunk Art 3" data-caption="Artist: Name Placeholder – Title: Placeholder" />
-    <img src="CBA5.jpg" alt="Cyberpunk Art 4" data-caption="Artist: Name Placeholder – Title: Placeholder" />
-    <img src="CBA6.jpg" alt="Cyberpunk Art 5" data-caption="Artist: Name Placeholder – Title: Placeholder" />
-  </section>
-
-  <div id="modal" class="modal">
-    <span class="close" onclick="closeModal()">&times;</span>
-    <span class="modal-nav left" onclick="prevImage()">&#10094;</span>
-    <div class="modal-content">
-      <img id="modal-img" src="" alt="">
-      <div class="modal-caption" id="modal-caption"></div>
+  <header class="site-header">
+    <a href="index.html" class="logo-title">
+      <img src="Flame logo-1.png.png" alt="Burnline logo">
+      <span>BURNLINE</span>
+    </a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
-    <span class="modal-nav right" onclick="nextImage()">&#10095;</span>
+    <nav class="site-nav" id="site-nav">
+      <a href="fiction.html">Fiction</a>
+      <a href="art.html">Art</a>
+      <a href="about.html">About</a>
+      <a href="submit.html">Submit</a>
+    </nav>
+  </header>
+
+  <main class="carousel-container">
+    <h1 style="text-align:center; color:#0df6e3;">Featured Art</h1>
+    <div class="carousel" id="carousel">
+      <img src="CBA1.jpg" alt="CBA1">
+      <img src="CBA3.jpg" alt="CBA3">
+      <img src="CBA4.jpg" alt="CBA4">
+      <img src="CBA5.jpg" alt="CBA5">
+      <img src="CBA6.jpg" alt="CBA6">
+      <img src="placeholder1.jpg" alt="Placeholder 1">
+      <img src="placeholder2.jpg" alt="Placeholder 2">
+      <img src="placeholder3.jpg" alt="Placeholder 3">
+    </div>
+  </main>
+
+  <div class="modal" id="modal">
+    <img id="modal-img" src="" alt="Expanded view">
   </div>
 
+  <footer>
+    <div class="footer-container">
+      <div class="footer-column">
+        <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
+        <p>Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <form>
+          <input type="email" placeholder="Email Address" class="newsletter-input">
+          <br>
+          <button type="submit" class="newsletter-button">Subscribe</button>
+        </form>
+      </div>
+      <div class="footer-column">
+        <h4 style="color: #0df6e3;">Get In Touch</h4>
+        <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
+      </div>
+      <div class="footer-column">
+        <h4 style="color: #0df6e3;">Read</h4>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">Future//Tense</a></p>
+        <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
+      </div>
+    </div>
+    <div class="footer-bottom">&copy; 2025 Burnline Magazine — All rights reserved</div>
+  </footer>
+
   <script>
+    function toggleMenu() {
+      document.getElementById('site-nav').classList.toggle('active');
+    }
+
     const modal = document.getElementById('modal');
     const modalImg = document.getElementById('modal-img');
-    const modalCaption = document.getElementById('modal-caption');
-    const galleryImages = document.querySelectorAll('.gallery img');
-    let currentIndex = 0;
+    const images = document.querySelectorAll('.carousel img');
 
-    function openModal(index) {
-      currentIndex = index;
-      modal.style.display = 'flex';
-      updateModal();
-    }
-
-    function closeModal() {
-      modal.style.display = 'none';
-    }
-
-    function updateModal() {
-      const img = galleryImages[currentIndex];
-      modalImg.src = img.src;
-      modalCaption.innerText = img.getAttribute('data-caption');
-    }
-
-    function prevImage() {
-      currentIndex = (currentIndex - 1 + galleryImages.length) % galleryImages.length;
-      updateModal();
-    }
-
-    function nextImage() {
-      currentIndex = (currentIndex + 1) % galleryImages.length;
-      updateModal();
-    }
-
-    galleryImages.forEach((img, index) => {
-      img.addEventListener('click', () => openModal(index));
+    images.forEach(img => {
+      img.addEventListener('click', () => {
+        modal.classList.add('active');
+        modalImg.src = img.src;
+        modalImg.alt = img.alt;
+      });
     });
 
-    modal.addEventListener('click', (e) => {
-      if (e.target === modal) {
-        closeModal();
-      }
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (modal.style.display === 'flex') {
-        if (e.key === 'ArrowLeft') prevImage();
-        if (e.key === 'ArrowRight') nextImage();
-        if (e.key === 'Escape') closeModal();
-      }
-    });
-
-    // Swipe gesture support
-    let startX = 0;
-    modal.addEventListener('touchstart', e => startX = e.touches[0].clientX);
-    modal.addEventListener('touchend', e => {
-      if (!startX) return;
-      const endX = e.changedTouches[0].clientX;
-      const diff = startX - endX;
-      if (diff > 50) nextImage();
-      if (diff < -50) prevImage();
-      startX = 0;
+    modal.addEventListener('click', () => {
+      modal.classList.remove('active');
     });
   </script>
 </body>
