--- a/art.html
+++ b/art.html
@@ -212,9 +212,28 @@
   </header>
 
   <section class="content">
-    <h1 class="gradient-heading">Page still under construction</h1>
-    <p>Thanks for checking out our <span class="gradient-pink">art page</span>. We’re almost ready to start accepting and showing off your shitty art. <span class="gradient-blue"> Check back soon.</span></p>
-  </section>
+  <section class="content">
+  <h1 class="gradient-heading">Featured Artwork</h1>
+  <p>Browse some of the latest submissions and featured visuals in Burnline’s gallery of cybernetic beauty and apocalyptic decay.</p>
+
+  <!-- Gallery Row 1 -->
+  <div style="overflow-x: auto; white-space: nowrap; padding: 1rem 0;">
+    <img src="/mnt/data/CBA1.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 1" />
+    <img src="/mnt/data/CBA2.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 2" />
+    <img src="/mnt/data/CBA3.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 3" />
+    <img src="/mnt/data/CBA4.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 4" />
+    <img src="/mnt/data/CBA5.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 5" />
+    <img src="/mnt/data/CBA6.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 6" />
+  </div>
+
+  <!-- Gallery Row 2 -->
+  <div style="overflow-x: auto; white-space: nowrap; padding: 1rem 0;">
+    <img src="/mnt/data/Placeholder Image 1.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 1" />
+    <img src="/mnt/data/Placeholder Image 2.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 2" />
+    <img src="/mnt/data/Placeholder Image 3.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 3" />
+    <img src="/mnt/data/Placeholder Image 6.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 4" />
+  </div>
+</section>
 
   <footer>
     <div class="footer-container">
