--- a/art.html
+++ b/art.html
@@ -12,6 +12,13 @@
       background: linear-gradient(135deg, #0f0f1c, #1b1e35);
       color: #f0f0f0;
     }
+    .content img {
+  transition: transform 0.3s ease;
+}
+
+.content img:hover {
+  transform: scale(1.05);
+}
 
     h1, h2, h3, h4, nav a, header {
       font-family: 'Orbitron', sans-serif;
