--- a/art.html
+++ b/art.html
@@ -225,20 +225,20 @@
 
   <!-- Gallery Row 1 -->
   <div style="overflow-x: auto; white-space: nowrap; padding: 1rem 0;">
-    <img src="/mnt/data/CBA1.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 1" />
-    <img src="/mnt/data/CBA2.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 2" />
-    <img src="/mnt/data/CBA3.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 3" />
-    <img src="/mnt/data/CBA4.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 4" />
-    <img src="/mnt/data/CBA5.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 5" />
-    <img src="/mnt/data/CBA6.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 6" />
+    <img src="CBA1.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 1" />
+    <img src="CBA2.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 2" />
+    <img src="CBA3.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 3" />
+    <img src="CBA4.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 4" />
+    <img src="CBA5.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 5" />
+    <img src="CBA6.jpg" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Art 6" />
   </div>
 
   <!-- Gallery Row 2 -->
   <div style="overflow-x: auto; white-space: nowrap; padding: 1rem 0;">
-    <img src="/mnt/data/Placeholder Image 1.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 1" />
-    <img src="/mnt/data/Placeholder Image 2.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 2" />
-    <img src="/mnt/data/Placeholder Image 3.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 3" />
-    <img src="/mnt/data/Placeholder Image 6.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 4" />
+    <img src="Placeholder Image 1.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 1" />
+    <img src="Placeholder Image 2.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 2" />
+    <img src="Placeholder Image 3.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 3" />
+    <img src="Placeholder Image 6.png" style="height: 320px; margin-right: 1rem; border-radius: 10px;" alt="Landscape Art 4" />
   </div>
 </section>
 
