--- a/art.html
+++ b/art.html
@@ -306,13 +306,13 @@
   <section class="gallery-grid" id="artGrid">
     <!-- Tiles (each must include data-title and data-artist) -->
         <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="CBA5.png" alt="Art 1">
+      <img src="CBA6.jpg" alt="Art 1">
     </div>
         <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="CBA6.png" alt="Art 1">
+      <img src="CBA5.jpg" alt="Art 1">
     </div>
         <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
-      <img src="CBA3.png" alt="Art 1">
+      <img src="CBA3.jpg" alt="Art 1">
     </div>
     <div class="art-tile" onclick="openModal(0)" data-title="Title or short description here" data-artist="Artist Name Here">
       <img src="Placeholder Image 1.png" alt="Art 1">
