--- a/art.html
+++ b/art.html
@@ -300,7 +300,7 @@
 
   <section class="gallery-hero">
     <h1>Featured Cyberpunk Art</h1>
-    <p>Visual transmissions from a fractured future. Explore our curated gallery of cyberpunk artwork from emerging and established creators. Submit your own vision to be featured in the next issue.</p>
+    <p>Interested in having your art featured in the next issue? Visit our Submit page.</p>
   </section>
 
   <section class="gallery-grid" id="artGrid">
