--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ body {
       <h1 class="gradient-heading">The Latest Issue</h1>
       <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam].</p>
       <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
-      <a href="hhttps://www.flipsnack.com/BA6E8CA8B7A/725-asf-epdf/full-view.html" class="read-issue-btn">Read this Issue</a>
+      <a href="https://www.flipsnack.com/BA6E8CA8B7A/725-asf-epdf/full-view.html" class="read-issue-btn">Read this Issue</a>
     </div>
     <img src="Test Cover 1.png" alt="Latest issue cover">
   </section>
