--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
       <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
     </div>
-    <img src="Test Cover 1.png" alt="Latest issue cover">
+    <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
   </section>
 
   <section id="latest-issue" style="padding: 2rem; text-align: center; display: none;">
