--- a/about.html
+++ b/about.html
@@ -232,7 +232,7 @@
       <!-- Newsletter -->
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
-        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest stories, art, and neon-lit news from Burnline.</p>
+        <p style="line-height: 1.6;">Sign up to our newsletter to get the latest neon-lit stories and art from Burnline.</p>
         <form style="margin-top: 1rem;">
           <input type="email" placeholder="Email Address" class="newsletter-input">
           <br>
