--- a/index.html
+++ b/index.html
@@ -236,15 +236,17 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1 class="gradient-heading">The Latest Issue</h1>
-      <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam].</p>
-      <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
-      <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
-    </div>
-    <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
-  </section>
+<section class="hero">
+  <div class="hero-text">
+    <h1 class="gradient-heading">The Latest Issue</h1>
+    <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam].</p>
+    <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
+  </div>
+  <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
+  <div class="hero-button-container">
+    <button id="toggle-flipbook" class="read-issue-btn">Read This Issue</button>
+  </div>
+</section>
 
   <section id="latest-issue" style="padding: 2rem; text-align: center; display: none;">
     <iframe allowfullscreen="allowfullscreen" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/055f81b30b.html" style="border: 1px solid lightgray; width: 100%; max-width: 900px; height: 600px; margin: 0 auto; display: block;"></iframe>
